reload button, and winner log added

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Snake</h1>
 
     <canvas class="board"></canvas>
+    <button onclick="location.reload()">Play again</button>
 </body>
 </html>
