Layout improvements: header on top

--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Snake</h1>
 
-    <canvas class="board"></canvas>
-    <button onclick="location.reload()">Play again</button>
+    <aside class="left"></aside>
+    <div class="center">
+        <header>
+            <h1>Snake</h1>
+        </header>
+        <canvas class="board"></canvas>
+    </div>
+    <aside class="right">
+        <button onclick="location.reload()">Restart</button>
+    </aside>
 </body>
 </html>
