Added: Change button color when clicked

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <aside class="left">
         <div class="buttons-left">
-            <div class="button-w">W</div>
-            <div class="button-a">A</div>
-            <div class="button-s">S</div>
-            <div class="button-d">D</div>
+            <div class="btn button-w">W</div>
+            <div class="btn button-a">A</div>
+            <div class="btn button-s">S</div>
+            <div class="btn button-d">D</div>
         </div>
     </aside>
     <div class="center">
@@ -30,10 +30,10 @@
     </div>
     <aside class="right">
         <div class="buttons-right">
-            <div class="button-up">&#11205</div>
-            <div class="button-left">&#11207</div>
-            <div class="button-down">&#11206</div>
-            <div class="button-right">&#11208</div>
+            <div class="btn button-up">&#11205</div>
+            <div class="btn button-left">&#11207</div>
+            <div class="btn button-down">&#11206</div>
+            <div class="btn button-right">&#11208</div>
         </div>
     </aside>
 </body>
