--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <aside class="right">
         <div class="buttons-right">
-            <div class="btn button-up">&#11205</div>
+            <div id="button-up" class="btn button-up">&#11205</div>
             <div class="btn button-left">&#11207</div>
             <div class="btn button-down">&#11206</div>
             <div class="btn button-right">&#11208</div>
